# Sentient-Ledger

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  LICENSE  README.md  SECURITY.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.claude/agents/: asset-warden.md  compliance-specialist.md  financial-analyst.md  process-manager.md
.github/workflows/: ci.yml
src/sentient_ledger/: __init__.py  config.py  observability.py
src/sentient_ledger/agents/: asset_warden.py  audit_helpers.py  base.py  compliance_specialist.py  financial_analyst.py  process_manager.py
src/sentient_ledger/api/: __init__.py  app.py  dependencies.py  models.py  run_logger.py  settings.py
src/sentient_ledger/bank_rec/: __init__.py  audit.py  cash_receipt_journal.py  mappings.py  parser.py  post_new_lines.py  reconcile_amex.py  reconcile_gl.py  validator.py
src/sentient_ledger/engine/: __init__.py  comparator.py  depreciation.py  detector.py
src/sentient_ledger/graph/: builder.py  routing.py
tests/: conftest.py
tests/eval/: conftest.py  test_ci_gate.py  test_comparator.py  test_depreciation.py  test_detector.py  test_scenarios.py
tests/integration/: test_api.py  test_bank_rec.py  test_compliance_asset_trigger.py  test_d365_ingestion.py  test_error_paths.py  test_full_happy_path.py  test_hitl_lifecycle.py  test_mcp_servers.py  test_p2_gate.py  test_p3_gate.py  test_p4_gate.py  test_p5_gate.py  test_state_transitions.py
tests/unit/: test_observability.py  test_package_api.py
(+127 files in other folders)
