[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentient-ledger"
version = "0.1.0"
description = "Self-healing, multi-agent financial reconciliation system"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentient_ledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
